Making app responsive in progress

--- a/app/src/main/res/layout/gym_trainer__dashboard.xml
+++ b/app/src/main/res/layout/gym_trainer__dashboard.xml
@@ -18,8 +18,8 @@
         app:itemIconTint="@android:color/white"
         app:itemTextColor="@android:color/white"
         app:menu="@menu/gymnavbar"
-
-        android:foreground="?attr/selectableItemBackground">
+        android:foreground="?attr/selectableItemBackground"
+        app:labelVisibilityMode="selected">
 
 
 
