--- a/app/src/main/res/layout/calenderfragment.xml
+++ b/app/src/main/res/layout/calenderfragment.xml
@@ -1,81 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightPink">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:layout_gravity="center"
-        android:background="#D82662"
-        android:drawableLeft="@drawable/ic_local_florist_black_24dp"
-        android:padding="10dp"
-        android:text="Your period Information is here."
-        android:textAlignment="center"
-        android:textColor="#FAF7F8"
-        android:textSize="17sp"
-        android:gravity="center"/>
-
-   <CalendarView
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_gravity="center"
-       android:textAlignment="center"
-       android:layout_marginTop="40dp"
-       android:background="#E9EDF1">
-
-   </CalendarView>
+    android:background="@color/lightPink"
+    android:orientation="vertical"
+    android:fillViewport="true">
 
     <LinearLayout
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:orientation="horizontal"
-       android:layout_marginTop="35sp">
-
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="  Period"
-          android:textSize="14sp"
-          android:textColor="#000000"
-          android:layout_marginLeft="20sp"
-          android:textAlignment="center"
-          android:padding="10dp"
-          android:drawableLeft="@drawable/ic_brightness_1_black_24dp"/>
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="  Fertile"
-          android:textSize="14sp"
-          android:textColor="#000000"
-          android:layout_marginLeft="20sp"
-          android:textAlignment="center"
-          android:padding="10dp"
-          android:drawableLeft="@drawable/ic_brightness2_1_black_24dp"/>
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="  Ovulation"
-          android:textSize="14sp"
-          android:textColor="#000000"
-          android:layout_marginLeft="20sp"
-          android:textAlignment="center"
-          android:drawableLeft="@drawable/ic_brightness3_1_black_24dp"
-          android:padding="10dp"/>
-
-   </LinearLayout>
-   <TextView
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:text="Make sure you get plenty of water everyday. Get into the habit of recording info daily. Daily Exercise is the good habit for health."
-       android:textColor="#D82662"
-       android:textSize="16sp"
-       android:textAlignment="center"
-       android:layout_gravity="center"
-       android:layout_marginTop="35sp"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/Pink"
+            android:drawableLeft="@drawable/ic_local_florist_black_24dp"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text="Your period Information is here."
+            android:textAlignment="center"
+            android:textColor="#FAF7F8"
+            android:textSize="17sp" />
 
-</LinearLayout>
+        <CalendarView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="40dp"
+            android:background="@color/whiteText"
+            android:textAlignment="center">
+
+        </CalendarView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35sp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20sp"
+                android:drawableLeft="@drawable/ic_brightness_1_black_24dp"
+                android:padding="10dp"
+                android:text="  Period"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20sp"
+                android:drawableLeft="@drawable/ic_brightness2_1_black_24dp"
+                android:padding="10dp"
+                android:text="  Fertile"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20sp"
+                android:drawableLeft="@drawable/ic_brightness3_1_black_24dp"
+                android:padding="10dp"
+                android:text="  Ovulation"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="35sp"
+            android:text="Make sure you get plenty of water everyday. Get into the habit of recording info daily. Daily Exercise is the good habit for health."
+            android:textAlignment="center"
+            android:textColor="@color/Pink"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+</ScrollView>
