--- a/app/src/main/res/layout/perioddashboard.xml
+++ b/app/src/main/res/layout/perioddashboard.xml
@@ -18,14 +18,21 @@
         app:itemIconTint="@android:color/white"
         app:itemTextColor="@android:color/white"
         app:menu="@menu/periodnavbar"
-        android:foreground="?attr/selectableItemBackground">
+        android:foreground="?attr/selectableItemBackground"
+        app:labelVisibilityMode="selected">
 
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
+    <ScrollView
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
     </FrameLayout>
+    </ScrollView>
 
 </RelativeLayout>
