added Double Lines in LineChart

--- a/app/src/main/res/layout/gym_homepage_fragment.xml
+++ b/app/src/main/res/layout/gym_homepage_fragment.xml
@@ -55,6 +55,7 @@
 
                 </LinearLayout>
                 <LinearLayout
+                    android:id="@+id/llSteps"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -190,7 +191,7 @@
                             android:id="@+id/waterMinus"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@mipmap/plusicon"
+                            android:background="@drawable/minusicon"
                             android:layout_weight="5"/>
                         <TextView
                             android:id="@+id/waterDisplay"
