--- a/app/src/main/res/layout/chartfragment.xml
+++ b/app/src/main/res/layout/chartfragment.xml
@@ -27,46 +27,28 @@
         android:layout_marginLeft="25dp"
         android:textSize="16dp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="  Period Length"
-            android:textColor="#030507"
-            android:layout_marginTop="6dp"
-            android:layout_marginLeft="20dp"
-            android:drawableLeft="@drawable/ic_brightness_1_black_24dp"
-            android:textSize="13dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="  Cycle Length"
-            android:textColor="#030507"
-            android:layout_marginTop="6dp"
-            android:layout_marginLeft="16dp"
-            android:drawableLeft="@drawable/ic_brightness2_1_black_24dp"
-            android:textSize="13dp"/>
-
-
-
-    </LinearLayout>
-
+       <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/LineChart"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        android:layout_alignParentTop="true"
+        android:minHeight="250dp"
+        android:layout_centerHorizontal="true"
+        android:padding="20dp"
         android:layout_marginRight="10dp">
+
     </com.github.mikephil.charting.charts.LineChart>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/LineChart">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -74,6 +56,7 @@
             android:textColor="#030507"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginBottom="20dp"
             android:drawableLeft="@drawable/ic_brightness_1_black_24dp"
             android:textSize="12dp"/>
 
@@ -84,13 +67,14 @@
             android:textColor="#030507"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="16dp"
+            android:layout_marginBottom="20dp"
             android:drawableLeft="@drawable/ic_brightness2_1_black_24dp"
             android:textSize="12dp"/>
 
 
 
     </LinearLayout>
-
+    </RelativeLayout>
 
 
 </LinearLayout>
