map fragment is still remaining

--- a/app/src/main/res/layout/personal_info.xml
+++ b/app/src/main/res/layout/personal_info.xml
@@ -52,7 +52,7 @@
             android:drawableEnd="@drawable/ic_account_box_black_24dp"
             android:padding="11dp"
             android:textSize="15sp"
-            android:textColor="#F7F9FD"
+            android:textColor="#fff"
             android:layout_marginHorizontal="0dp"
             android:layout_marginTop="30dp"
             android:singleLine="true"
@@ -83,7 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/loginbuttons"
-        android:textColor="#F7F9FD"
+        android:textColor="#fff"
         android:drawableLeft="@drawable/ic_person_black_24dp"
         android:drawableEnd="@drawable/ic_person_black_24dp"
         android:drawableRight="@drawable/ic_person_black_24dp"
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/loginbuttons"
-        android:textColor="#F7F9FD"
+        android:textColor="#fff"
         android:drawableLeft="@drawable/ic_email_black_24dp"
         android:drawableEnd="@drawable/ic_email_black_24dp"
         android:drawableRight="@drawable/ic_email_black_24dp"
@@ -111,7 +111,7 @@
         android:id="@+id/etPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#F7F9FD"
+        android:textColor="#fff"
         android:drawableLeft="@drawable/ic_lock_black_24dp"
         android:drawableRight="@drawable/ic_lock_black_24dp"
         android:drawableEnd="@drawable/ic_lock_black_24dp"
@@ -129,7 +129,7 @@
         android:id="@+id/etconfirm_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#F7F9FD"
+        android:textColor="#fff"
         android:drawableLeft="@drawable/ic_lock_black_24dp"
         android:drawableRight="@drawable/ic_lock_black_24dp"
         android:drawableEnd="@drawable/ic_lock_black_24dp"
