--- a/app/src/main/res/layout/health__info.xml
+++ b/app/src/main/res/layout/health__info.xml
@@ -35,6 +35,7 @@
             android:textSize="20sp" />
 
         <Button
+            android:id="@+id/number_picker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="120dp"
@@ -46,9 +47,10 @@
             android:textAlignment="textStart"
             android:textAllCaps="false"
             android:textColor="#CFC6C6"
-            android:textSize="18dp" />
+            android:textSize="18dp"/>
 
         <Button
+            android:id="@+id/weightDialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -63,6 +65,7 @@
             android:textSize="18sp" />
 
         <Button
+            android:id="@+id/DateOfBirthDialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
