--- a/app/src/main/res/layout/login_account.xml
+++ b/app/src/main/res/layout/login_account.xml
@@ -40,7 +40,8 @@
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
                 android:padding="15dp"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textColor="#fff"/>
 
             <EditText
                 android:id="@+id/etPassword"
@@ -56,8 +57,8 @@
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
                 android:padding="15dp"
-                android:textSize="16sp" />
-
+                android:textSize="16sp"
+                android:textColor="#fff"/>
             <Button
                 android:id="@+id/bLoginToHealth"
                 android:layout_width="200dp"
