--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#000</color>
     <color name="colorPrimaryDark">#000</color>
     <color name="colorAccent">#065B4F</color>
-    <color name="whiteText">#FDFEFF</color>
+    <color name="whiteText">#fff</color>
     <color name="Black">#000000</color>
     <color name="Blue">#2C82DA</color>
     <color name="Pink">#D82662</color>
