--- a/app/src/main/res/layout/calenderfragment.xml
+++ b/app/src/main/res/layout/calenderfragment.xml
@@ -2,6 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/lightPink"
     android:orientation="vertical"
     android:fillViewport="true">
@@ -25,21 +27,26 @@
             android:textColor="#FAF7F8"
             android:textSize="17sp" />
 
-        <CalendarView
+        <com.kizitonwose.calendarview.CalendarView
+            android:id="@+id/calendarView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            android:background="@color/whiteText"
-            android:textAlignment="center">
+            app:cv_dayViewResource="@layout/calendar_day_layout" />
 
-        </CalendarView>
-
+       <!-- <TextView
+            android:id="@+id/calendarDayText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="16sp"
+            tools:text="22" />
+-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="35sp"
             android:orientation="horizontal">
+
 
             <TextView
                 android:layout_width="wrap_content"
