--- a/app/src/main/res/layout/personal_info.xml
+++ b/app/src/main/res/layout/personal_info.xml
@@ -83,14 +83,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/loginbuttons"
-        android:textColor="#fff"
-        android:drawableLeft="@drawable/ic_person_black_24dp"
-        android:drawableEnd="@drawable/ic_person_black_24dp"
-        android:drawableRight="@drawable/ic_person_black_24dp"
+        android:textColor="@color/whiteText"
         android:padding="7dp"
         android:singleLine="true"
         android:textSize="15sp"
-        android:entries="@array/Gender"/>
+        android:entries="@array/Gender"
+        />
     <EditText
         android:id="@+id/etemail"
         android:layout_width="match_parent"
