period calender view is pending

--- a/app/src/main/res/layout/calenderfragment.xml
+++ b/app/src/main/res/layout/calenderfragment.xml
@@ -30,7 +30,7 @@
         <com.kizitonwose.calendarview.CalendarView
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="400dp"
             app:cv_dayViewResource="@layout/calendar_day_layout" />
 
        <!-- <TextView
