--- a/app/src/main/res/layout/calenderfragment.xml
+++ b/app/src/main/res/layout/calenderfragment.xml
@@ -27,11 +27,11 @@
             android:textColor="#FAF7F8"
             android:textSize="17sp" />
 
-        <com.kizitonwose.calendarview.CalendarView
-            android:id="@+id/calendarView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cv_dayViewResource="@layout/calendar_day_layout" />
+        <!--<com.kizitonwose.calendarview.CalendarView-->
+            <!--android:id="@+id/calendarView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:cv_dayViewResource="@layout/calendar_day_layout" />-->
 
        <!-- <TextView
             android:id="@+id/calendarDayText"
