--- a/app/src/main/res/layout/dialog_weight_picker.xml
+++ b/app/src/main/res/layout/dialog_weight_picker.xml
@@ -70,7 +70,8 @@
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
             android:gravity="center"
-            android:text="Set" />
+            android:text="Set"
+            android:layout_alignParentLeft="true" />
 
     </LinearLayout>
 
