--- a/app/src/main/res/layout/period_info.xml
+++ b/app/src/main/res/layout/period_info.xml
@@ -47,7 +47,7 @@
         android:text="Choose Date"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="16dp" />
     <TextView
         android:layout_width="match_parent"
@@ -69,7 +69,7 @@
         android:text="Period length"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="16dp" />
     <TextView
     android:layout_width="match_parent"
@@ -92,7 +92,7 @@
         android:textSize="16dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/loginbuttons"
-        android:textColor="#000"/>
+        android:textColor="#fff"/>
         </LinearLayout>
     </ScrollView>
     <RelativeLayout
