--- a/app/src/main/res/layout/health__info.xml
+++ b/app/src/main/res/layout/health__info.xml
@@ -39,6 +39,7 @@
             android:id="@+id/HeightDialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hapticFeedbackEnabled="true"
             android:layout_marginTop="120dp"
             android:background="@drawable/loginbuttons"
             android:drawableLeft="@mipmap/heighticon"
@@ -47,7 +48,7 @@
             android:text="   Height"
             android:textAlignment="textStart"
             android:textAllCaps="false"
-            android:textColor="#CFC6C6"
+            android:textColor="#fff"
             android:textSize="18dp"
             android:gravity="start" />
 <!--
@@ -68,9 +69,10 @@
             android:drawableRight="@drawable/ic_add_box_black_24dp"
             android:padding="15dp"
             android:text="   Weight"
+            android:hapticFeedbackEnabled="true"
             android:textAlignment="textStart"
             android:textAllCaps="false"
-            android:textColor="#CFC6C6"
+            android:textColor="#fff"
             android:textSize="18sp"
             android:gravity="start" />
 
@@ -79,6 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:hapticFeedbackEnabled="true"
             android:background="@drawable/loginbuttons"
             android:drawableLeft="@drawable/ic_date_range_black_24dp"
             android:drawableRight="@drawable/ic_add_box_black_24dp"
