--- a/app/src/main/res/layout/selected__field.xml
+++ b/app/src/main/res/layout/selected__field.xml
@@ -88,12 +88,14 @@
                 android:textStyle="bold" />
 
             <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/RGgym"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical">
 
                 <RadioButton
+                    android:id="@+id/rbtnStayFit"
                     android:layout_width="231dp"
                     android:layout_height="35dp"
                     android:background="@mipmap/whitebackground"
@@ -104,6 +106,7 @@
                     android:textSize="20sp" />
 
                 <RadioButton
+                    android:id="@+id/rbtnWeightLoss"
                     android:layout_width="match_parent"
                     android:layout_height="37dp"
                     android:background="@mipmap/whitebackground"
@@ -114,6 +117,7 @@
                     android:textSize="20sp" />
 
                 <RadioButton
+                    android:id="@+id/rbtnWeightGain"
                     android:layout_width="match_parent"
                     android:layout_height="37dp"
                     android:background="@mipmap/whitebackground"
@@ -147,12 +151,14 @@
 
 
             <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/RGperiod"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical">
 
                 <RadioButton
+                    android:id="@+id/rbtnTryingToConceive"
                     android:layout_width="233dp"
                     android:layout_height="38dp"
                     android:background="@mipmap/whitebackground"
@@ -162,6 +168,7 @@
                     android:textSize="20sp" />
 
                 <RadioButton
+                    android:id="@+id/rbtnRegularTracker"
                     android:layout_width="match_parent"
                     android:layout_height="37dp"
                     android:background="@mipmap/whitebackground"
