--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="Pink">#D82662</color>
     <color name="lightPink">#F1C8D7</color>
     <color name="LightBlue">#5BA0E9</color>
-
+    <color name="Red">#FF0000</color>
     <color name="black_overlay">#66000000</color>
 </resources>
