--- a/app/src/main/res/layout/bodyactivity.xml
+++ b/app/src/main/res/layout/bodyactivity.xml
@@ -39,11 +39,13 @@
             android:gravity="center"
             android:layout_marginTop="140dp"/>
         <RadioGroup
+            android:id="@+id/RGbodyActiveness"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <RadioButton
+                android:id="@+id/rbtnworkoutHero"
                 android:layout_width="270dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="90dp"
@@ -66,6 +68,7 @@
                 android:textSize="15sp"/>
 
             <RadioButton
+                android:id="@+id/rbtnlightMode"
                 android:layout_width="270dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="90dp"
@@ -86,6 +89,7 @@
                 android:textSize="15sp"
                 android:paddingLeft="11dp"/>
             <RadioButton
+                android:id="@+id/rbtnNewOne"
                 android:layout_width="270dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="90dp"
