--- a/app/src/main/res/layout/calenderfragment.xml
+++ b/app/src/main/res/layout/calenderfragment.xml
@@ -27,6 +27,15 @@
             android:textColor="#FAF7F8"
             android:textSize="17sp" />
 
+        <com.stacktips.view.CustomCalendarView
+            android:id="@+id/calendar_view"
+            android:layout_marginTop="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/lightPink">
+        </com.stacktips.view.CustomCalendarView>
+
         <!--<com.kizitonwose.calendarview.CalendarView-->
             <!--android:id="@+id/calendarView"-->
             <!--android:layout_width="match_parent"-->
