--- a/app/src/main/res/layout/gym_homepage_fragment.xml
+++ b/app/src/main/res/layout/gym_homepage_fragment.xml
@@ -24,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="25sp"
+        android:layout_marginBottom="60dp"
         android:fillViewport="true">
         <LinearLayout
             android:layout_width="match_parent"
