--- a/app/src/main/res/layout/gym_trainer__dashboard.xml
+++ b/app/src/main/res/layout/gym_trainer__dashboard.xml
@@ -12,7 +12,7 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/gymNavigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:background="@color/colorAccent"
         app:itemIconTint="@android:color/white"
