--- a/app/src/main/res/layout/mefragment.xml
+++ b/app/src/main/res/layout/mefragment.xml
@@ -56,6 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
+                android:textStyle="bold|italic"
                 android:text="Period Length"
                 android:textColor="@color/Black"/>
         </LinearLayout>
@@ -82,6 +83,7 @@
                 android:textColor="#000"
                 android:textStyle="bold"/>
                 <EditText
+                    android:id="@+id/etName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
@@ -104,13 +106,13 @@
                     android:padding="10dp"
                     android:textColor="#000"
                     android:textStyle="bold"/>
-                <Spinner
+                <EditText
+                    android:id="@+id/genderET"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
                     android:padding="10dp"
                     android:layout_gravity="left"
-                    android:entries="@array/Gender"
                     android:backgroundTint="@color/colorAccent"/>
             </LinearLayout>
 
@@ -129,6 +131,7 @@
                     android:textColor="#000"
                     android:textStyle="bold"/>
                 <EditText
+                    android:id="@+id/etDOB"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
@@ -153,6 +156,7 @@
                     android:textColor="#000"
                     android:textStyle="bold"/>
                 <EditText
+                    android:id="@+id/etEMail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
@@ -175,13 +179,15 @@
                     android:padding="10dp"
                     android:textColor="#000"
                     android:textStyle="bold"/>
+
                 <EditText
+                    android:id="@+id/etHeight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
+                    android:backgroundTint="#fff"
                     android:padding="10dp"
-                    android:text="Example"
-                    android:backgroundTint="#fff"/>
+                    android:text="Example" />
             </LinearLayout>
 
             <LinearLayout
@@ -199,6 +205,7 @@
                     android:textColor="#000"
                     android:textStyle="bold"/>
                 <EditText
+                    android:id="@+id/etWeigth"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
@@ -222,6 +229,7 @@
                     android:textColor="#000"
                     android:textStyle="bold"/>
                 <EditText
+                    android:id="@+id/passwordET"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="20"
