--- a/app/src/main/res/drawable/flowcheck.xml
+++ b/app/src/main/res/drawable/flowcheck.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/selectedend"
+    <item android:drawable="@drawable/flowmedium"
         android:state_checked="true" />
     <!-- When not selected, use white-->
-    <item android:drawable="@drawable/unselectedend"
+    <item android:drawable="@drawable/flowmediumselected"
         android:state_checked="false"/>
 
 </selector>
