--- a/app/src/main/res/layout/bodyactivity.xml
+++ b/app/src/main/res/layout/bodyactivity.xml
@@ -110,7 +110,7 @@
                 android:paddingLeft="18dp"
                 android:textSize="15sp"/>
         </RadioGroup>
-        </LinearLayout>n
+        </LinearLayout>
     </ScrollView>
     <RelativeLayout
         android:layout_width="fill_parent"
