--- a/app/src/main/res/drawable/periodendcheck.xml
+++ b/app/src/main/res/drawable/periodendcheck.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/selectedend"
-        android:state_checked="true" />
-    <!-- When not selected, use white-->
-    <item android:drawable="@drawable/unselectedend"
-        android:state_checked="false"/>
+
+    <item android:drawable="@drawable/selectedend" android:state_selected="true"/>
+    <item android:drawable="@drawable/selectedend" android:state_checked="true"/>
+
+    <item android:drawable="@drawable/selectedend" android:state_pressed="true"/>
+    <item android:drawable="@drawable/disabledend" android:state_enabled="false" />
+    <item android:drawable="@drawable/unselectedend"/>
+    <item android:drawable="@drawable/unselectedend" android:state_checked="false"/>
+
+    <!--<item android:drawable="@drawable/disabledend"-->
+        <!--android:state_enabled="false"/>-->
+
+    <!--<item android:drawable="@drawable/selectedend"-->
+        <!--android:state_checked="true" />-->
+    <!--&lt;!&ndash; When not selected, use white&ndash;&gt;-->
+    <!--<item android:drawable="@drawable/unselectedend"-->
+        <!--android:state_checked="false"/>-->
 
 </selector>
